--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <h2>Featured Projects</h2>
                     <p>Below are a few school projects to fill in the space while I continue to 
                         learn more things and work on my next side project. Link to my 
-                        <a href="https://github.com/krobison10/GUICalculator">GitHub repository</a>.  
+                        <a href="https://github.com/krobison10">GitHub repository</a>.  
                     </p>
 
                     <section class="project-item">
